apps/Django-app-main/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: Django-app-main
  labels:
    name: Django-app-main
    managed-by: dev-portal
